public/stylesheets/sass/mau.scss
/* ... */
div.feedtitle  {
  font-size: 11px;
  font-weight: 700;
  text-align: left;
}

.feedentry {
  &.even { 
    border-top: 1px dotted #444;
    border-bottom: 1px dotted #444;
  }
  padding: 2px 5px 5px 5px;
}
.feedtxt {
  color: $black;
  font-size: 10px;
  text-align: left;
  overflow:hidden;
  iframe {
    display: none;
  }
}

/* for news page */
.news-footer {
  line-height: 32px;
  margin-top: 30px;
}
.news-footer span {
  vertical-align: top;
}

.markdown, #open_studios {
  & h1 {
    text-align: center;
    color: $xlightgray;
  }
  & h3, h4, h5 {
    text-align: left; 
    color: #8392a4;
  }
  & h4 {
    margin-bottom: .5em;
    font-size: 125%;
  }
  & .section {
    li {
      line-height: 1.7em;
    }
    width: 560px;
    margin: 25px auto 20px;
  }
  & p {
    margin-left: 0;
    padding-left: 0;
  }
  & blockquote p {
    line-height: 1.1em;
  }
}
#open_studios {
  .os-catalog-icon {
    width: 156px;
    height: 200px;
    float: right;
    padding-bottom: 20px;
  }
  .artist-links {
    margin-top: 10px;
    clear: right;
    h5 {
      font-size: 100%;
      margin: 5px;
      padding: 5px;
      border: 1px solid $mediumgray;
      @include small-rounded-corners;
      float:left;
      width: 28%;
      text-align: center;
    }
    h5:first-child {
      float: left;
    }
  }    
}

#news_text {
  p {
    padding-left: 0;
  }
  span.title {
    text-transform: uppercase;
  }
}

#artists_resources {
  border-top: 1px solid $darkbluegray;
}

#artists_resources div h4 {
  margin: 20px 0;
}
#artists_resources .excerpt {
  font-size: 9px;
  margin: 8px;
}

.artists-resources-entries {
  float:left;
  text-align: left;
  .main-entry {
    float: left;
    margin-top: 10px;
  }
  span.title {
    text-transform: uppercase;
    font-size:105%;
  }
  .artists-resource-block {
    margin: 20px auto;
    li {
      margin-left: 10px;
    }
  }
}

/*
  .rcol .feedtitle {
  font-size: 14px;
  }

.rcol div.feed-sxn-hdr {
display:none;
}

.rcol .feedtxt {
color: $white;
font-size: small;
}
.rcol .feed-entries {
border: 0px;
}
.rcol .feedentry {
margin: 0 0 20px 0;
}
*/
.feeddate {
  float: right;
  font-style: italic;
  font-weight: normal;
  font-size: x-small;
  padding-right: 10px;
}

.refresh-msg{
  font-size: x-small;
  font-weight: 100;
  padding-top: 45px;
  text-align: center;
}

.little-txt{
  font-size: x-small;
}


/* careful with this.
   on the login page, we have id="login" in an input tag
   but this one controls the login bar at the top of the screen
   */
#logout {
  clear: right;
  .navitem { margin-left: 2px; margin-right: 2px; float:right;}
  span.navitem { border-right: 1px solid $darkgray; padding-right: 4px;}
  span.navitem.last { border-right: 0; padding-right: 0;}
}

#login_toplink, #logout {
  color:$darkgray;
  font-size:x-small;
  margin: 3px auto 4px auto;
  padding: 4px 0 4px 0;
  text-align:right;
  width:908px;
}

#container{
  background-color:$darkbluegray;
  margin: auto;
  padding:5px;
  position:relative;
  width: 900px;
}


.lkmap {
  font-size: 80%;
}

#contact_text {
  margin-left:40px;
  margin-right:40px;
}
#artist_edit {
  h4 {
    margin-left:auto;
    margin-right:auto;
    text-align:center;
    width: 560px;
  }
}

#news_text {
  text-align: justify;
  width: 560px;
  margin-left: auto;
  margin-right: auto;
}

#about_text, .privacy-content {
  text-align: justify;
  width: 560px;
  margin-left: auto;
  margin-right: auto;
}
.privacy-content h5 {
  margin-top: 10px;
}

#all_artists_page {
  padding-bottom: 20px;
  margin:auto;
  width:800px;
  h4 { 
    text-align:center; 
  }
}

#map_page{
  margin:auto;
  width:800px;
  & .navlinks, & .map-os-switch {
    padding-top: 25px;
    padding-bottom: 5px;
  }
}


#studio_page h4 {
  margin-top: 4px;
}

.content-block, #studio_page
{
  width: 560px;
  margin: auto;
}

.roster {
  font-size:85%;
  margin: auto;
}
.roster .chunk {
  float: left;
  margin: 10px 10px 0 0;
  width: 18%;
}
.chunk .name {
  text-align:left
}


#about_text, #contact_text,
#news_text, .privacy-content {
  color: $xlightgray;
  font-size: 12px;
}

.alpha-pagination {
  text-align: center;
  font-size: 85%;
  margin: 2px;
  line-height:25px;
}
.alpha-pg, .curpg {
  border: 1px dotted #444;
  padding: 2px 4px;
  white-space:nowrap;
}

.studio-memberlist {
  color: $lightgray;
  text-align:left;
  margin-top: 15px;
  vertical-align: top;
}
.studio-info {
  padding-bottom: 10px;
}

div#header{
  text-align:center;
  background-color: $white;
}

table{
  border-collapse: collapse;
}


#feedcolumn{
  float:left;
  padding:10px 0;
  margin:5px 0;
  background-color: $mediumgray;
}
#bigthumbcolumn{
  background-color: $black;
  margin: 20px;
  .artp-thumb-container {
    float: none;
  }
  .artp-thumb {
    margin-left: auto;
    margin-right: auto;
  }
}
table.tbl-content{
  background-color:$black;
  vertical-align: top;
  width: 900px;
}
#searchtools{
  float:left;
  background: $darkgray;
  margin: 5px 0 0 0;
  padding: 0;
  width: 900px;
}
#topnav{
  clear:both;
  font-weight:bold;
  width:880px;
  text-align:right;
  padding: 8px 20px 8px 0;
}

#tagline{
  clear:both;
  width:900px;
  padding:5px 0;
  text-align:left;
}
#searchbox{
  clear:both;
  width:900px;
  padding:5px 0;
  text-align:right
}

a { outline:none; }

img {
  border: 0;
  outline: none;
}

img#logo
{
  float:left;
  position:absolute;
  text-align:left;
  top:-30px;
  left:260px;
  z-index:10;
  border: 0;
}
#profile_update {
  margin: auto;
  .content-block {
    margin: auto;
    padding: 10px;
    text-align:center;
    div{
      text-align:left;
      margin: auto;
      width: 400px;
    }
    .error-msg {
      margin: auto;
    }
  }
}

#artist_profile_name {
  float: left;
  width: 320px;
}
#artist_profile_img {
  float: right;
  margin: 20px 2px 15px 20px;
  position: relative;
}

.os-violator {
  bottom: 0px;
  position:absolute;
  left: -26px;
  z-index:1;
  img {
    width: 96px;
    height: 100px;
  }
}
/* ... */

